# ImpactIQ

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
data/seed/: .gitkeep
evals/: __init__.py  corpus.py  graders.py  run.py
src/impactiq/: __init__.py  __main__.py  audit.py  baton_store.py  cli.py  dataverse_client.py  estate_cache.py  identity.py  proposals.py  server.py  settings.py
src/impactiq/agents/: __init__.py  contracts.py  critic.py  instructions.py  loop.py  multi_agent.py  runtime.py  single_agent.py  specialists.py  structured.py  tools.py  url_resolve.py  workiq.py
src/impactiq/builder/: __init__.py  executor.py  gate.py
src/impactiq/connectors/: __init__.py  base.py  dataverse.py  flows.py  solutions.py
src/impactiq/graph/: __init__.py  adjudication.py  build.py  collisions.py  model.py  permissions.py  resolve.py  risk.py  traverse.py
src/impactiq/report/: __init__.py  artifacts.py  card.py  render.py  schema.py  verdict_gate.py
surface/: README.md  m365agents.local.yml  m365agents.playground.yml  m365agents.yml  package-lock.json  package.json
surface/appPackage/: manifest.json
surface/infra/: azure.bicep  azure.parameters.json
surface/src/: agent.ts  config.ts
tests/: conftest.py  test_artifacts_p6.py  test_behavior_pins.py  test_boundary_redraw.py  test_builder_b0.py  test_builder_b2.py  test_builder_b3.py  test_builder_executor.py  test_builder_tools.py  test_builder_walls.py  test_collision_scan.py  test_conv_memory.py  test_critic.py  test_defect_vs_expected.py  test_evals.py  test_flow_parser.py  test_graph_traverse.py  test_job_poll.py  test_multi_agent_p7.py  test_obo.py  test_permissions_diagnosis.py  test_record_fix_proposals.py  test_server.py  test_server_p8.py  test_structured.py  test_url_resolve.py  test_verdict_gate.py
tests/fixtures/: estate.py
