[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impactiq"
version = "0.0.0"
description = "Multi-agent Power Platform impact & change-intelligence agent (read-only, draft-only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core runtime dependencies (version floors only). The heavier Azure AI
# Foundry / Agent Framework packages live in the optional extras below so a
# minimal install stays light.
dependencies = [
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "azure-identity>=1.19",
    "pydantic>=2.7",
    "networkx>=3.3",
    # Cryptographic verification of the forwarded Teams user token (signature,
    # issuer, audience, expiry) before its claims are trusted for ownership or
    # audit attribution.
    "pyjwt[crypto]>=2.9",
    # Use the OS (Windows) certificate store for TLS so corporate/AV TLS
    # interception roots are trusted without bundling a custom CA file.
    "truststore>=0.9",
]

[project.optional-dependencies]
# Azure AI Foundry integration: the Foundry Agent Service prompt-agent
# pattern plus the Foundry IQ knowledge base. The prompt-agent path needs
# only `azure.ai.projects.models` (FunctionTool + MCPTool +
# PromptAgentDefinition); `azure-ai-agents` (the older assistants/runs
# pattern) is not used.
# `azure-search-documents` is a preview build because knowledge-base
# retrieval uses the 2026-05-01-preview Knowledge Bases API.
foundry = [
    "azure-ai-projects>=2.2.0",
    "azure-search-documents>=11.6.0b0",
]
# Microsoft Agent Framework: concurrent fan-out/fan-in orchestration of the
# specialist agents. Only the core workflow primitives are used
# (WorkflowBuilder, fan-out/fan-in edges, @executor); Foundry connectivity
# stays on azure-ai-projects.
agents = [
    "agent-framework-core>=1.8.1",
]
# Bridge API: the local HTTP API the TypeScript Teams surface calls.
surface = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]
# Dev tooling.
dev = [
    "pytest>=8",
]

[project.scripts]
# `impactiq` and `cli` are the same entry point under two names; either
# works inside the venv.
impactiq = "impactiq.cli:main"
cli = "impactiq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/impactiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
